@@ -1,3 +1,9 @@
+2001-03-29  Arturo Espinosa  <arturo@ximian.com>
+
+	* report.pl.in: Report entries for replace.
+	* replace.pl.in: Documented functions, and
+	  added report stuff too.
+	
 2001-03-29  Tambet Ingo  <tambet@ximian.com>
 
 	* users-conf.in (read_shells): Implement.
